# cppchallenege

./: .gitignore  .travis.yml  25x25.txt  50x50.txt  CMakeLists.txt  LICENSE  README.md  example.txt  generate.m  main.cpp  matrix2d.h  rectangle.txt  test.txt  test2.txt  testfile.template  utilities.h
data/: small.txt
include/cppchallenge/: matrix2d.h  utilities.h
test/: rectangle.cpp  square.cpp
